--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,23 @@
 h1 {
     color: orange;
     font-size: 5em;
+    text-decoration: underline;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 p {
     color: slateblue;
     font-size: 2em;
+    text-align: left;
+    column-count: 2;
+}
+
+ul {
+    border-bottom: 6px solid black;
+    
+}
+
+li {
+    list-style-type: square;
 }
