--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,42 @@ footer {
     padding: 10px;
     text-align: center;
 }
+
+/* pseudo classes single (:) */
+
+nav li a:hover {
+    text-decoration: underline;
+}
+
+.images li:hover{
+    /* transform: scale(1.1);
+    transition: 0.5s; */
+    position: relative;
+    top: -4px;
+}
+
+form input:focus {
+    border: 4px dashed #4B4B4B;
+    outline: none;
+}
+form input:valid {
+    border: 4px solid #71d300;
+}
+/* pseudo elements has double (::) */
+article p::first-line {
+    font-weight: bold;
+    font-size: 1.2em;
+}
+section.join p::first-letter {
+    font-size: 1.5em;
+}
+
+p::selection {
+    background-color: #F63232;
+    color: white;
+}
+
+p::after{
+    content: "...";
+}
+
